--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "clip",
-  "version": "0.0.1",
+  "name": "cli-path",
+  "version": "0.1.0",
   "description": "Answer to the simple question: Should I stay or should I go?",
   "author": "iosifv",
   "license": "MIT",
