--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "clip": "./bin/clip.js"
   },
   "scripts": {
-    "configstore-watch": "watch cat ~/.config/configstore/clip.json",
-    "configstore-edit": "code ~/.config/configstore/clip.json",
+    "configstore-watch": "watch cat ~/.config/configstore/cli-path.json",
+    "configstore-edit": "code ~/.config/configstore/cli-path.json",
     "set-executable": "chmod 777 ./bin/clip.js && ls ./bin -lisa",
     "pub": "npm version patch && npm publish",
     "start": "node ."
