--- a/cli-app/package.json
+++ b/cli-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cli-path",
-  "version": "0.1.12",
-  "description": "Answer to the simple question: Should I stay or should I go?",
+  "version": "0.1.13",
+  "description": "Tool for querying maps and direction information from the terminal",
   "author": "iosifv",
   "license": "MIT",
   "keywords": [
@@ -15,7 +15,7 @@
   "scripts": {
     "configstore-watch": "watch cat ~/.config/configstore/cli-path.json",
     "configstore-edit": "code ~/.config/configstore/cli-path.json",
-    "set-executable": "chmod 777 ./bin/clip.js && ls ./bin -lisa",
+    "set-executable": "chmod 777 ./bin/clip.js && ls -lisa ./bin",
     "npm-publish": "git add . && git commit -m 'publishing new version' && npm version patch &&  git push && npm publish",
     "start": "node ./bin/clip.js"
   },
