--- a/.insomnia/Request/req_8699e6b7a55c409c912979ee143f036d.yml
+++ b/.insomnia/Request/req_8699e6b7a55c409c912979ee143f036d.yml
@@ -1,18 +1,17 @@
-_id: req_b19413e3c133472192dbae90794bc4b9
+_id: req_8699e6b7a55c409c912979ee143f036d
 type: Request
 parentId: wrk_fa086e14429f4b9991af953ebe681d09
-modified: 1670677468265
-created: 1670049858497
-url: "{{ _.url }}direction"
-name: /direction
+modified: 1670677458884
+created: 1670623695917
+url: "{{ _.url }}location"
+name: /location
 description: ""
 method: POST
 body:
   mimeType: application/json
   text: |-
     {
-    	"origin": "Amsterdam",
-    	"destination": "Berlin"
+    	"query": "eroilor cluj"
     }
 parameters: []
 headers:
@@ -20,7 +19,7 @@ headers:
     value: application/json
     id: pair_1f14c046162b48d1934d1120c14a3443
 authentication: {}
-metaSortKey: -1667863400896
+metaSortKey: -1667863400883.5
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
