--- a/.insomnia/Request/req_a5cfee53e0564f61a8f221a2b47229b2.yml
+++ b/.insomnia/Request/req_a5cfee53e0564f61a8f221a2b47229b2.yml
@@ -1,9 +1,9 @@
 _id: req_a5cfee53e0564f61a8f221a2b47229b2
 type: Request
 parentId: fld_f1d61b50bbf04eb9bce05bca40d778e2
-modified: 1670677870193
+modified: 1670708547787
 created: 1670219512910
-url: https://iosifv.eu.auth0.com/oauth/device/code
+url: "{{ _.auth0_url }}oauth/device/code"
 name: cli-request-code
 description: >
   ### Used on the "device flow" (in the CLI App)
