--- a/.insomnia/Environment/env_1a35c2c824e04ff890b9e3b33f9cd09e3655148c.yml
+++ b/.insomnia/Environment/env_1a35c2c824e04ff890b9e3b33f9cd09e3655148c.yml
@@ -5,6 +5,7 @@ modified: 1670708530499
 created: 1667863400919
 name: Base Environment
 data:
+  base_url: "{{ scheme }}://{{ host }}{{ base_path }}"
   url: http://localhost:3000/dev/
   auth0_url: https://iosifv.eu.auth0.com/
 dataPropertyOrder:
