--- a/cli-app/package.json
+++ b/cli-app/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.16",
     "chalk": "^5.2.0",
+    "cli-table3": "^0.6.3",
     "commander": "^9.4.1",
     "configstore": "^6.0.0",
     "inquirer": "^9.1.4",
