--- a/.insomnia/Environment/env_env_1a35c2c824e04ff890b9e3b33f9cd09e3655148c_sub.yml
+++ b/.insomnia/Environment/env_env_1a35c2c824e04ff890b9e3b33f9cd09e3655148c_sub.yml
@@ -8,6 +8,7 @@ data:
   scheme: https
   base_path: /v2
   host: petstore.swagger.io
+  bearerToken: bearerToken
 dataPropertyOrder: null
 color: null
 isPrivate: false
