--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,7 @@
 name: build
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
 jobs:
   build:
@@ -12,11 +12,13 @@ jobs:
         # to reflect the release schedule. https://nodejs.org/en/about/releases/
         node-version: [14.x, 16.x, 18.x]
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-    - run: yarn install --frozen-lockfile
+      - uses: actions/checkout@v2
+      - name: Change Directory
+        run: cd cli-app/
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+      - run: yarn install --frozen-lockfile
     # - run: yarn test
