--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Change Directory
-        run: cd cli-app/
+        run: pwd && cd cli-app/ && pwd
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
