--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,10 +16,10 @@ jobs:
       - name: Change Directory
         run: pwd && cd cli-app/ && pwd
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3.5.1
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+    #     cache: 'yarn'
       - run: yarn install
       - run: yarn start --help
     # - run: yarn test
