--- a/.github/workflows/cli-app-test.yaml
+++ b/.github/workflows/cli-app-test.yaml
@@ -1,4 +1,4 @@
-name: build
+name: CLI-App Test
 on:
   push:
     branches: [main]
@@ -16,10 +16,9 @@ jobs:
       - name: Change Directory
         run: pwd && cd cli-app/ && pwd
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3.5.1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-    #     cache: 'yarn'
-      - run: yarn install
+          # cache: 'yarn'
+      - run: yarn
       - run: yarn start --help
-    # - run: yarn test
