--- a/.github/workflows/cli-app-test.yaml
+++ b/.github/workflows/cli-app-test.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         # Set to the former tested version. Should probably update this
@@ -14,11 +14,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3.5.1
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
       - name: Yarn Install
         run: cd /home/runner/work/cli-path/cli-path/cli-app && yarn
-      - name: Display command help
+      - name: Display cli-app version
+        run: cd /home/runner/work/cli-path/cli-path/cli-app && yarn start --version
+      - name: Display cli-app help
         run: cd /home/runner/work/cli-path/cli-path/cli-app && yarn start --help
