--- a/.github/workflows/sls-api-test.yaml
+++ b/.github/workflows/sls-api-test.yaml
@@ -10,16 +10,17 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [14.x, 16.x]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - name: serverless deploy
+      - run: cd /home/runner/work/cli-path/cli-path/sls-api && yarn
+      - name: serverless info
         uses: serverless/github-action@v3.1
+        run: cd /home/runner/work/cli-path/cli-path/sls-api
         with:
           args: info
         env:
