--- a/.github/workflows/sls-api-test.yaml
+++ b/.github/workflows/sls-api-test.yaml
@@ -20,9 +20,8 @@ jobs:
       - run: cd /home/runner/work/cli-path/cli-path/sls-api && yarn
       - name: serverless info
         uses: serverless/github-action@v3.1
-        run: cd /home/runner/work/cli-path/cli-path/sls-api
         with:
-          args: info
+          args: -c "cd /home/runner/work/cli-path/cli-path/sls-api && serverless info"
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           # or if using AWS credentials directly
