--- a/.insomnia/Request/req_b19413e3c133472192dbae90794bc4b9.yml
+++ b/.insomnia/Request/req_b19413e3c133472192dbae90794bc4b9.yml
@@ -1,7 +1,7 @@
 _id: req_b19413e3c133472192dbae90794bc4b9
 type: Request
 parentId: fld_f51937a7d0594c41a07f9f5963b48983
-modified: 1670761832454
+modified: 1670883932612
 created: 1670049858497
 url: "{{ _.url }}direction"
 name: /direction
@@ -11,8 +11,8 @@ body:
   mimeType: application/json
   text: |-
     {
-    	"origin": "Amsterdam",
-    	"destination": "Cluj"
+    	"origin": "cluj",
+    	"destination": "brasov"
     }
 parameters: []
 headers:
