--- a/cli-app/package.json
+++ b/cli-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-path",
-  "version": "0.2.5",
+  "version": "0.2.15",
   "description": "Tool for querying maps and direction information from the terminal",
   "author": "iosifv",
   "license": "MIT",
@@ -18,7 +18,8 @@
     "configstore-edit": "code ~/.config/configstore/cli-path.json",
     "configstore-watch": "watch cat ~/.config/configstore/cli-path.json",
     "set-executable": "chmod 777 ./bin/clip.js && ls -lisa ./bin",
-    "npm-publish": "git add . && git commit -m 'publishing new version' && npm version patch &&  git push && npm publish",
+    "npm-reinstall": "npm list -g && npm remove -g cli-path && npm install -g cli-path && npm list -g",
+    "npm-publish": "npm version patch && npm publish",
     "start": "node ./bin/clip.js"
   },
   "dependencies": {
