--- a/.github/workflows/cli-app-install.yaml
+++ b/.github/workflows/cli-app-install.yaml
@@ -18,5 +18,5 @@ jobs:
 
       - name: NPM Global Install
         run: npm install -g cli-path
-      - name: Display clip version
-        run: clip --version
+      - name: Display clip help
+        run: clip --help
