--- a/.github/workflows/sls-api-test.yaml
+++ b/.github/workflows/sls-api-test.yaml
@@ -3,25 +3,25 @@ on:
   push:
     branches:
       - main
-
 jobs:
   info:
     name: deploy
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd /home/runner/work/cli-path/cli-path/sls-api && yarn
+      # - run: cd /home/runner/work/cli-path/cli-path/sls-api && yarn
       - name: serverless info
         uses: serverless/github-action@v3.1
         with:
           args: -c "cd /home/runner/work/cli-path/cli-path/sls-api/ && serverless info"
+          entrypoint: /bin/sh
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           # or if using AWS credentials directly
