[main] - OK, here we go, reviving this app in 2024gst

--- a/sls-api/.gitignore
+++ b/sls-api/.gitignore
@@ -2,6 +2,9 @@
 node_modules
 jspm_packages
 
+# using yarn, make sure there's no package-lock
+package-lock.json
+
 # Serverless directories
 .serverless
 
