--- a/sls-api/package.json
+++ b/sls-api/package.json
@@ -7,12 +7,16 @@
     "invoke-local-01-healthcheck": "sls invoke local --function=healthcheck --path=src/functions/healthcheck/mock.json",
     "invoke-local-02-authentication": "sls invoke local --function=authentication --path=src/functions/authentication/mock.json",
     "invoke-local-03-location": "sls invoke local --function=location --path=src/functions/location/mock.json",
-    "invoke-local-04-direction": "sls invoke local --function=direction --path=src/functions/direction/mock.json"
+    "invoke-local-04-direction": "sls invoke local --function=direction --path=src/functions/direction/mock.json",
+    "invoke-local-05-statistics": "sls invoke local --function=statistics --path=src/functions/statistics/mock.json"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.204.0",
+    "@aws-sdk/client-dynamodb": "^3.556.0",
+    "@aws-sdk/lib-dynamodb": "^3.556.0",
     "@googlemaps/google-maps-services-js": "^3.3.16",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
